--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 :root{
     --main-color: #d3ad7f;
@@ -26,16 +25,15 @@
     border-radius: 50%;
     width: 15rem;
     height: 15rem;
-    margin: 30px 10px 0px 70px;
+    margin: 2rem .8rem 0px 3.5rem;
     position: fixed;
     z-index: 1001;
-    backdrop-filter: blur(5px);
 }
 
 .logo a img{
     position: relative;
-    left: 10px;
-    padding: 10px;
+    left: .8rem;
+    padding: .8rem;
     width: 90%;
     height: 90%;
     z-index: 1010;
@@ -43,22 +41,12 @@
 
 html{
     width: 100%;
-    font-size: 62.5%;
+    font-size: 5rem;
     overflow-x: hidden;
     scroll-padding-top: 9rem;
     scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar {
-    width: .8rem;
-}
-html::-webkit-scrollbar-track {
-    background: transparent;
-}
-html::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 5rem;
-}
 
 body{
     position: absolute;
@@ -85,23 +73,19 @@ section{
 }
 
 .btn{
-    text-decoration: none;
+    display: inline-block;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #fff;
     outline: 2px solid #fff;
-    position: relative;
     overflow: hidden;
     margin-top: 2rem;
-    display: inline-block;
     padding: .9rem 3rem;
     font-size: 1.7rem;
-    backdrop-filter: blur(50px);
     cursor: pointer;
     transition: color .5s;
 }
 .btn:hover{
-    letter-spacing: .2rem;
     color: var(--main-color);
 }
 
@@ -109,7 +93,7 @@ section{
     content:'';
     position: absolute;
     top: 0;
-    left: -50px;
+    left: -4.5rem;
     width: 0;
     height: 100%;
     background-color: #fff;
@@ -119,42 +103,6 @@ section{
 }
 
 .btn:hover::before{
-    width: 150%;
-}
-
-.menu .box-container .btn{
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #fff;
-    outline: 2px solid #fff;
-    position: relative;
-    margin-top: 2rem;
-    display: inline-block;
-    padding: .9rem 3rem;
-    font-size: 1.7rem;
-    background: var(--main-color);
-    cursor: pointer;
-    transition: color .5s;
-}
-
-.menu .box-container .btn:hover{
-    color: #fff;
-}
-
-.menu .box-container .btn::before{
-    content:'';
-    position: absolute;
-    top: 0;
-    left: -50px;
-    width: 0;
-    height: 100%;
-    background-color: #000;
-    transform: skewX(35deg);
-    z-index: -1;
-    transition: width .5s;
-}
-
-.menu .box-container .btn:hover::before{
     width: 150%;
 }
 
@@ -174,6 +122,7 @@ section{
     cursor: pointer;
     transition: color s;
 }
+
 .btn_1:hover{
     letter-spacing: .2rem;
     color: var(--main-color);
@@ -182,10 +131,10 @@ section{
 
 .header{
     width: 100%;
-    backdrop-filter: blur(10px);
+    background: rgb(9,9,121);
+background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%, rgba(136,136,136,0.2) 100%);
     position: fixed;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 4rem 2%;
@@ -195,7 +144,7 @@ section{
 }
 
 .header .navbar{
-    width: 90%;
+    width: 85%;
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -229,6 +178,10 @@ section{
     margin-left: 2rem;
 }
 
+.header .icons{
+    margin-right: 1rem;
+}
+
 .header .icons div:hover{
     color: var(--main-color);
 }
@@ -237,119 +190,14 @@ section{
     display: none;
 }
 
-.header .search-form{
-    position: absolute;
-    top: 115%;
-    right: 7%;
-    background: #fff;
-    width: 40rem;
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    transform: scaleY(0);
-    transform-origin: top;
-}
-
-.header .search-form.active{
-    transform: scaleY(1);
-}
-.header .search-form input{
-    height: 100%;
-    width: 100%;
-    font-size: 1.6rem;
-    color: var(--black);
-    padding: 1rem;
-    text-transform: none;
-}
-
-.header .search-form label{
-    cursor: pointer;
-    font-size: 2.2rem;
-    margin-right: 1.5rem;
-    color: var(--black);
-}
-
-.header .search-form label:hover{
-    color: var(--main-color);
-}
-
-.header .cart-items-container{
-    position: absolute;
-    top: 100%;
-    right: -100%;
-    height: calc(80vh - 9.5rem);
-    width: 35rem; 
-    transition: all .5s;
-    padding: 0 1.5rem;
-    background: #fff;
-    /* opacity: 0.9; */
-}
-
-.header .cart-items-container.active{
-    right: 0;
-}
-
-.header .cart-items-container .cart-item{
-    position: relative;
-    margin: 2rem 0;
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-}
-.header .cart-items-container .cart-item .last{
-    position: relative;
-    margin: 0rem 0;
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    width: 6.6rem;
-}
-
-.header .cart-items-container .cart-item .fa-times{
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2rem;
-    cursor: pointer;
-    color: var(--main-color);
-}
-
-.header .cart-items-container .cart-item .fa-times:hover{
-    color: #000;
-}
-
-.header .cart-items-container .cart-item img{
-    height: 7rem;
-}
-.header .cart-items-container .cart-item .content h3{
-    font-size: 2rem;
-    color: var(--main-color);
-    padding-bottom: .5rem;
-}
-.header .cart-items-container .cart-item .content .price{
-    font-size: 1.5rem;
-    color: var(--main-color);
-}
-
-.header .cart-items-container .btn{
-    width: 100%;
-    text-align: center;
-    background: var(--main-color);
-}
 
 .container-slider{
     position: absolute;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: inset 0 0 35px 10px #ddd;
+    box-shadow: inset 0 0 2.5rem  #ddd;
 }
 
-.slider{
-    position: relative;
-    display: flex;
-    width: 400%;
-    margin-left: -100%;
-}
 
 .slider__section{
     width: 100%;
@@ -361,34 +209,6 @@ section{
     height: 100vh;
     opacity: .5;
     object-fit: cover;
-}
-
-.slider__btn{
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background: rgba(255,255,255,.5);
-    top: 500px;
-    transform: translateY(-50%);
-    font-size: 30px;
-    font-weight: bold;
-    font-family: monospace;
-    text-align: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 999;
-}
-
-.slider__btn:hover{
-    background: #fff;
-}
-
-.slider__btn--left{
-    left: 30px;
-}
-
-.slider__btn--right{
-    right: 30px;
 }
 
 #home{
@@ -491,54 +311,57 @@ section{
     padding: 1.5rem 0;
 }
 
-.menu .box-container .box .price{
-    color: #fff;
-    font-size:2.5rem;
-    padding: 5rem 0;
-}
-.menu .box-container .box .price span{
-    font-weight: lighter;
-    font-size:1.5rem;
-    text-decoration: line-through;
-}
 .menu .box-container .box:hover{
     background: #fff;
 }
 .menu .box-container .box:hover > h3{
     color: var(--black);
 }
-.menu .box-container .box:hover > .price{
-    color: var(--black);
+
+.menu .box-container .btn{
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+    outline: 2px solid #fff;
+    position: relative;
+    margin-top: 2rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    background: var(--main-color);
+    cursor: pointer;
+    transition: color .5s;
 }
+
 
 #products{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 0px 0;
-    /* width: 90%; */
+    padding: 0 0;
     max-width: 70%;
     overflow: hidden;
     margin: auto;
 }
 
+
 .products .box-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .products .box-container .box{
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
     text-align: center;
 }
 .products .box-container .box1{
     position: relative;
     width: 33rem;
     display: flex;  
-    padding: 10px;
+    padding: .8rem;
     justify-content: center; 
     align-items: center;
     z-index: 0;
@@ -551,7 +374,6 @@ section{
 .products .box-container .box1 .content a{
     font-size: 3rem;
     position: relative;
-    display: flex;
     z-index: 1;
 }
 
@@ -560,7 +382,6 @@ section{
 }
 .products .box-container .box .image img{
     height: 50rem;
-    cursor: pointer;
 }
 .products .box-container .box .content h3{
     color:#fff;
@@ -575,44 +396,6 @@ section{
    font-weight: lighter;
     font-size: 1.5rem;
 }
-
-.imagen-light{
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.8);
-    transform: translate(100%);
-    transition: transform .2s ease-in-out;
-}
-
-.agregar-imagen{
-    width: 20%;
-    transform: scale(0);
-    border-radius: 10px;
-    transition: transform .3s .2s;
-}
-
-.showImage{
-    transform: scale(1);
-}
-
-.show{
-    transform: translate(0);
-}
-
-.close{
-    position: absolute;
-    top: 100px;
-    right: 30px;
-    width: 40px;
-    cursor: pointer;
-}
-
 
 
 #review{
@@ -749,7 +532,6 @@ input::-webkit-inner-spin-button {
 }
 .footer .share .wp .wp__2{
     position: relative;
-    top: -1px;
     height: 1.8rem;
 }
 
@@ -815,7 +597,7 @@ input::-webkit-inner-spin-button {
     
 } 
 
-@media (max-width:991px){
+@media (max-width:1024px){
     html{
         font-size: 50%;
     }
@@ -831,7 +613,7 @@ input::-webkit-inner-spin-button {
     }
 }
 
-@media (max-width:767px){
+@media (max-width:760px){
     #menu-btn{
         display: inline-block;
     }
@@ -932,7 +714,7 @@ input::-webkit-inner-spin-button {
     }
 }
 
-@media (max-width:580px){
+@media (max-width:480px){
     html{
         font-size: 50%;
     }
@@ -950,7 +732,7 @@ input::-webkit-inner-spin-button {
     }
 }
 
-@media (max-width:400px){
+@media (max-width:320px){
     html{
         font-size: 40%;
     }
