--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
 :root{
     --main-color: #d3ad7f;
     --black: #13131a;
@@ -41,15 +42,13 @@
 
 html{
     width: 100%;
-    font-size: 5rem;
+    font-size: .6rem;
     overflow-x: hidden;
     scroll-padding-top: 9rem;
     scroll-behavior: smooth;
 }
 
-
 body{
-    position: absolute;
     background: var(--bg);
 }
 
@@ -73,17 +72,20 @@ section{
 }
 
 .btn{
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #fff;
-    outline: 2px solid #fff;
-    overflow: hidden;
-    margin-top: 2rem;
-    padding: .9rem 3rem;
-    font-size: 1.7rem;
-    cursor: pointer;
-    transition: color .5s;
+    text-decoration: none;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     color: #fff;
+     outline: 2px solid #fff;
+     position: relative;
+     overflow: hidden;
+     margin-top: 2rem;
+     display: inline-block;
+     padding: .9rem 3rem;
+     font-size: 1.7rem;
+     backdrop-filter: blur(50px);
+     cursor: pointer;
+     transition: color .5s
 }
 .btn:hover{
     color: var(--main-color);
@@ -92,6 +94,7 @@ section{
 .btn::before{
     content:'';
     position: absolute;
+    overflow: hidden;
     top: 0;
     left: -4.5rem;
     width: 0;
@@ -132,7 +135,7 @@ section{
 .header{
     width: 100%;
     background: rgb(9,9,121);
-background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%, rgba(136,136,136,0.2) 100%);
+    background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%, rgba(136,136,136,0.2) 100%);
     position: fixed;
     display: flex;
     align-items: center;
@@ -159,14 +162,9 @@ background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%
     position: relative;
 }
 
-.header .navbar a span{
-    display: none;
-}
-
 .header .navbar a:hover{
     color: #f09422;
-    border-bottom: .1rem solid var(--main-color);
-    padding-bottom: .5rem;
+    border-bottom: solid var(--main-color);
 }
 
 .header .icons div{
@@ -186,12 +184,9 @@ background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%
     color: var(--main-color);
 }
 
-#menu-btn{
-    display: none;
-}
-
 
 .container-slider{
+    width: 100%;
     position: absolute;
     overflow: hidden;
     border-radius: 10px;
@@ -495,7 +490,6 @@ background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%
     
 }
 
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -569,14 +563,66 @@ input::-webkit-inner-spin-button {
     color: var(--main-color);
 }
 
+.popular{
+    margin-bottom: 8rem;
+}
+
+.popular h2{
+    margin-top: 8rem;
+}
+
+.popular .box-container{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(30rem, 1fr));
+    gap: 1rem;
+}
+
+.popular .box-container img{
+    width: 80%;
+}
+
+.popular .box span{
+    background-color: #fff;
+    color: var(--main-color);
+    font-size: 2rem;
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.popular .box-container h3{
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: lighter;
+    text-align: center;
+}
+
+.popular .box-container .box{
+    margin: 2rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+
+.popular .box-container .box .img_container{
+    display: flex;
+    justify-content: center;
+    height: 80%;
+}
+
+
 /* media queries */
 
 @media (max-width:1200px){
+
+
     .menu .box-container .box img{
-        max-width: 300px;
+        max-width: 20rem;
     }
-    html{
-        font-size: 55%;
+
+    .logo-container{
+        margin: 2rem 1rem 0 2rem;
     }
 
     section{
@@ -592,90 +638,47 @@ input::-webkit-inner-spin-button {
     }
 
     .footer{
-        padding: 10px;
+        padding: .8rem;
     }
     
 } 
 
 @media (max-width:1024px){
-    html{
-        font-size: 50%;
-    }
     .header{
         padding: 4rem 2%;
+        justify-content: flex-end;
+    }
+
+    .header .navbar a{
+        font-size: 1.5rem;
     }
     section{
         padding: 10rem;
     }
     .menu .box-container .box img{
-        max-width: 200px;
-        max-height: 200px;
+        max-width: 20rem;
+        max-height: 20rem;
+    }
+
+    .popular .box-container .box a{
+        font-size: 1.5rem;
     }
 }
 
 @media (max-width:760px){
-    #menu-btn{
-        display: inline-block;
-    }
-
+  
     .menu .box-container .box img{
-        max-width: 200px;
-    }
-
-    .logo-container{
-        width: 20rem;
-        margin: 30px 10px 0px 40px;
+        max-width: 20rem;
     }
 
     .header{
         justify-content: flex-end;
     }
-   
-    .header .navbar{
-        display: flex;
-        flex-direction:column;
-        justify-content: space-around;
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        border: 3px solid #fff;
-        width: 30rem;
-        height: calc(100vh - 9.5rem);
-    }
-    .header .navbar a span{
-        display: inline-flex;
-        margin: 1rem;
+
+    html{
+        font-size: .5rem;
     }
 
-    .header .navbar.active{
-        right: 0;
-    }
-
-    .header .navbar a{
-        color: var(--black);
-        display: block;
-        margin: 1.5rem;
-        padding: .5rem;
-        font-size: 2rem;
-        font-family: 'Oswald', sans-serif;
-    }
-
-    .header .navbar .icon{
-        border: 2px solid #b86b0e;
-        padding: 1rem;
-        border-radius: 50%;
-        font-size: 1.5rem;
-    }
-
-    .header .navbar i{
-        color: #b86b0e;
-        font-size: 1.5rem;
-    }
-
-    .header .search-form{
-        width: 45%;
-        right: 2rem;
-    }
 
     .home{
         background-position: left;
@@ -715,27 +718,22 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width:480px){
-    html{
-        font-size: 50%;
-    }
-    .header{
-        padding: 1.5rem 2rem;
-    }
-}
 
-@media (max-width:480px){
-    html{
-        font-size: 40%;
-    }
     .header{
-        padding: 1.5rem 2rem;
+        padding: 2rem;
+    }
+
+    html{
+        font-size: .3rem;
     }
 }
 
 @media (max-width:320px){
+
     html{
-        font-size: 40%;
+        font-size: .3rem;
     }
+
     .header{
         padding: 1.5rem 2rem;
     }
